[project]
name = "deepagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.6.11",
    "ipykernel>=7.3.0",
    "langchain>=1.3.10",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=1.0.0",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.6",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "tavily>=1.1.0",
    "tavily-python>=0.7.26",
    "torch>=2.12.1",
    "transformers>=5.12.1",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
]
